--- a/LICENSE/HTML/notices.html
+++ b/LICENSE/HTML/notices.html
@@ -48,92 +48,61 @@ including without<br>
 limitation URLs or references to any third party websites.<br>
 <br>
 <br>
-Ruby is copyrighted free software by Yukihiro Matsumoto 
-<matz@netlab.jp>.<br>
-You can redistribute it and/or modify it under either the 
-terms of the GPL<br>
-version 2 (see the file GPL), or the conditions below:<br>
+Ruby is copyrighted free software by Yukihiro Matsumoto <matz@netlab.jp>.<br>
+You can redistribute it and/or modify it under either the terms of the<br>
+2-clause BSDL (see the file BSDL), or the conditions below:<br>
 <br>
-  1. You may make and give away verbatim copies of the 
-source form of the<br>
-     software without restriction, provided that you 
-duplicate all of the<br>
+  1. You may make and give away verbatim copies of the source form of the<br>
+     software without restriction, provided that you duplicate all of the<br>
      original copyright notices and associated disclaimers.<br>
 <br>
-  2. You may modify your copy of the software in any way, 
-provided that<br>
+  2. You may modify your copy of the software in any way, provided that<br>
      you do at least ONE of the following:<br>
 <br>
-       a) place your modifications in the Public Domain or 
-otherwise<br>
-          make them Freely Available, such as by posting 
-said<br>
-		   modifications to Usenet or an equivalent medium, or by 
-allowing<br>
-		   the author to include your modifications in the 
-software.<br>
+       a) place your modifications in the Public Domain or otherwise<br>
+          make them Freely Available, such as by posting said<br>
+	  modifications to Usenet or an equivalent medium, or by allowing<br>
+	  the author to include your modifications in the software.<br>
 <br>
-       b) use the modified software only within your 
-corporation or<br>
+       b) use the modified software only within your corporation or<br>
           organization.<br>
 <br>
-       c) give non-standard binaries non-standard names, 
-with<br>
-          instructions on where to get the original 
-software distribution.<br>
+       c) give non-standard binaries non-standard names, with<br>
+          instructions on where to get the original software distribution.<br>
 <br>
-       d) make other distribution arrangements with the 
-author.<br>
+       d) make other distribution arrangements with the author.<br>
 <br>
-  3. You may distribute the software in object code or 
-binary form,<br>
+  3. You may distribute the software in object code or binary form,<br>
      provided that you do at least ONE of the following:<br>
 <br>
-       a) distribute the binaries and library files of the 
-software,<br>
-		   together with instructions (in the manual page or 
-equivalent)<br>
-		   on where to get the original distribution.<br>
+       a) distribute the binaries and library files of the software,<br>
+	  together with instructions (in the manual page or equivalent)<br>
+	  on where to get the original distribution.<br>
 <br>
-       b) accompany the distribution with the machine-
-readable source of<br>
-		   the software.<br>
+       b) accompany the distribution with the machine-readable source of<br>
+	  the software.<br>
 <br>
-       c) give non-standard binaries non-standard names, 
-with<br>
-          instructions on where to get the original 
-software distribution.<br>
+       c) give non-standard binaries non-standard names, with<br>
+          instructions on where to get the original software distribution.<br>
 <br>
-       d) make other distribution arrangements with the 
-author.<br>
+       d) make other distribution arrangements with the author.<br>
 <br>
-  4. You may modify and include the part of the software 
-into any other<br>
-     software (possibly commercial).  But some files in the 
-distribution<br>
-     are not written by the author, so that they are not 
-under these terms.<br>
+  4. You may modify and include the part of the software into any other<br>
+     software (possibly commercial).  But some files in the distribution<br>
+     are not written by the author, so that they are not under these terms.<br>
 <br>
-     For the list of those files and their copying 
-conditions, see the<br>
+     For the list of those files and their copying conditions, see the<br>
      file LEGAL.<br>
 <br>
-  5. The scripts and library files supplied as input to or 
-produced as <br>
-     output from the software do not automatically fall 
-under the<br>
-     copyright of the software, but belong to whomever 
-generated them, <br>
-     and may be sold commercially, and may be aggregated 
-with this<br>
+  5. The scripts and library files supplied as input to or produced as <br>
+     output from the software do not automatically fall under the<br>
+     copyright of the software, but belong to whomever generated them, <br>
+     and may be sold commercially, and may be aggregated with this<br>
      software.<br>
 <br>
-  6. THIS SOFTWARE IS PROVIDED "AS IS" AND WITHOUT ANY 
-EXPRESS OR<br>
-     IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE 
-IMPLIED<br>
-     WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A 
-PARTICULAR<br>
+  6. THIS SOFTWARE IS PROVIDED "AS IS" AND WITHOUT ANY EXPRESS OR<br>
+     IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED<br>
+     WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR<br>
      PURPOSE.<br>
 <br>
 <br>
